Initial commit: YOLOv1 implementation with vanilla and enhanced versions
- Vanilla version: SGD optimizer + MSE loss
- Enhanced version: Adam optimizer + CrossEntropy loss
- Full training pipeline with data loading, augmentation, and evaluation
- Includes non-max suppression and mAP calculation
- Excluded data folders for size considerations

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,12 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+# Add to .gitignore
+**/data/            # Ignore all data directories
+*.pth               # Ignore model weights
+*.tar               # Ignore checkpoint files
+*.onnx              # Ignore ONNX exports
+__pycache__/        # Ignore Python cache
+*.jpg               # Ignore sample images
+*.png
+*.history
